made images align correctly

--- a/sass.scss
+++ b/sass.scss
@@ -271,6 +271,16 @@ body .flexslider-hg.flexslider ul.slides > li:first-child {
 	margin: 20px;
 }
 
+.alignright {
+  float:right;
+  margin:0 0 10px 10px;
+}
+
+.alignleft {
+  float:left;
+  margin:0 10px 10px 0;
+}
+
 .fb-BottomBar {
   margin-top: 15px;
 }
